[package]
name = "aerugo"
version = "0.1.0"
authors = [
    "N7 Space",
    "Filip Demski <glamhoth@protonmail.com>",
]
edition = "2018"
rust-version = "1.59"
description = "Safety-critical applications oriented Real-Time Operating System"
# documentation
readme = "README.md"
# homepage
repository = "https://github.com/n7space/aerugo"
license = "MIT OR Apache-2.0"
keywords = ["cortex-m", "rtos", "space"]
categories = ["aerospace", "embedded", "hardware-support", "no-std"]
# workspace

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
bare-metal = "0.2.4"
heapless = "0.7"
fugit = "0.3.6"

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "hello_world"
