[workspace]
members = [
    "aerugo-hal",
    "arch/cortex-m/aerugo-cortex-m",
    "arch/cortex-m/samv71-hal",
    "arch/cortex-m/samv71q21-pac",
    "arch/x86/aerugo-x86",
    "arch/x86/x86-hal",
    "utils/env-parser",
    "utils/env-parser-tests",
    "utils/internal_cell",
    "calldwell/calldwell-rs",
]
exclude = ["examples", "testbins", "calldwell/examples"]

[workspace.package]
version = "0.1.0"
authors = [
    "N7 Space",
    "Filip Demski <glamhoth@protonmail.com>",
    "Wojciech Olech <wojciech_olech@hotmail.com>",
]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/n7space/aerugo"
# homepage
license = "MIT OR Apache-2.0"

[workspace.dependencies]

[package]
name = "aerugo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Safety-critical applications oriented Real-Time Operating System"
# documentation
readme = "README.md"
keywords = ["rtos", "space"]
categories = ["aerospace", "embedded", "hardware-support", "no-std"]

[dependencies]
heapless = "0.7"
fugit = "0.3.6"
bare-metal = "0.2.4"
aerugo-hal = { version = "0.1.0", path = "aerugo-hal" }
aerugo-cortex-m = { version = "0.1.0", path = "arch/cortex-m/aerugo-cortex-m", optional = true }
samv71-hal = { version = "0.1.0", path = "arch/cortex-m/samv71-hal", optional = true }
aerugo-x86 = { version = "0.1.0", path = "arch/x86/aerugo-x86", optional = true }
x86-hal = { version = "0.1.0", path = "arch/x86/x86-hal", optional = true }
env-parser = { version = "1.0.0", path = "utils/env-parser" }
internal-cell = { version = "0.0.1", path = "utils/internal_cell" }

[dev-dependencies]
test-binary = "3.0"
assert_cmd = "2.0"

[features]
use-aerugo-cortex-m = ["aerugo-cortex-m", "samv71-hal"]
use-aerugo-x86 = ["aerugo-x86", "x86-hal"]
test-aerugo-cortex-m = ["use-aerugo-x86"]
rt = ["samv71-hal?/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
