[package]
name = "aerugo-hal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Hardware Abstraction Layer for Aerugo system"

[dependencies]
critical-section = "1.1.2"
fugit = "0.3.6"
