[tool.poetry]
name = "calldwell"
version = "0.1.0"
description = "Simple test framework for embedded applications"
authors = ["Wojciech Olech <wojciech.olech@n7space.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygdbmi = "^0.11.0.0"
paramiko = "^3.3.1"
ruff = "^0.0.288"
pylint = "^2.17.5"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
types-paramiko = "^3.3.0.0"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
show_error_codes = true

[tool.ruff]
line-length = 100

[tool.pylint.main]
max-line-length = 100
jobs = 0                # auto-detects the amount of available threads to run in parallel
fail-under = '10.0'     # we do not allow subpar quality code here
suggestion-mode = 'yes'
# This hook assumes that all the checks are ran from root directory of Aerugo.
# It adds this directory to system path, so Pylint can find the module imports correctly.
# This is a workaround that allows to not disable the rules that inform about invalid imports,
# as it's much more drastic than altering the PATH.
init-hook = '''import sys
from pathlib import Path
sys.path.append(Path("."))
'''
load-plugins = '''pylint.extensions.code_style,
pylint.extensions.comparison_placement,
pylint.extensions.confusing_elif,
pylint.extensions.for_any_all,
pylint.extensions.consider_refactoring_into_while_condition,
pylint.extensions.consider_ternary_expression,
pylint.extensions.mccabe,
pylint.extensions.docstyle,
pylint.extensions.check_elif,
pylint.extensions.empty_comment,
pylint.extensions.eq_without_hash,
pylint.extensions.private_import,
pylint.extensions.redefined_variable_type,
pylint.extensions.no_self_use,
pylint.extensions.overlapping_exceptions,
pylint.extensions.redefined_loop_name,
pylint.extensions.typing,
'''

[tool.pylint.messages]
enable = 'all'
disable = '''logging-fstring-interpolation,
logging-not-lazy,
locally-disabled,
suppressed-message,
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
