[package]
name = "aerugo-x86"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "x86 specific implementation for Aerugo"

[dependencies]
aerugo-hal = { version = "0.1.0", path = "../../aerugo-hal" }
bare-metal = "0.2.4"
fugit = "0.3.6"
once_cell = "1.18.0"
