[package]
name = "samv71-spi-accelerometer"
authors = [
    "Filip Demski <glamhoth@protonmail.com>",
    "Wojciech Olech <wojciech_olech@hotmail.com>",
]
edition = "2021"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerugo = { version = "0.1.0", path = "../..", features = [
    "use-aerugo-cortex-m",
    "rt",
] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
bitfield-enum = { path = "../../utils/bitfield-enum" }
paste = "1.0.14"
derive_more = { version = "1.0.0-beta.6", features = [
    "try_from",
    "try_into",
], default-features = false }
lsm6dso = { path = "../../utils/lsm6dso" }

[features]
rt = ["aerugo/rt"]

[profile.release]
codegen-units = 1
lto = true
debug = true
