[package]
authors = ["Filip Demski <glamhoth@protonmail.com>"]
edition = "2018"
name = "cortex-m-hello-world"
version = "0.1.0"

[dependencies]
aerugo = { version = "0.1.0", path = "../..", features = ["use-aerugo-cortex-m"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
