[package]
name = "samv71-fizz-buzz"
authors = [
    "Wojciech Olech <wojciech_olech@hotmail.com>",
    "Filip Demski <glamhoth@protonmail.com>",
]
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerugo = { version = "0.1.0", path = "../..", features = [
    "use-aerugo-cortex-m",
] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
debug = true
