[package]
name = "test-hal-timer"
authors = ["Wojciech Olech <wojciech_olech@hotmail.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
aerugo = { version = "0.1.0", path = "../..", features = [
    "use-aerugo-cortex-m",
    "rt",
] }
calldwell = { version = "0.1.0", path = "../../calldwell/calldwell-rs" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }

[features]
rt = ["aerugo/rt"]

[profile.release]
codegen-units = 1
lto = true
debug = true
