[package]
name = "env-parser"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Parser for environmental variables"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
