[package]
name = "internal-cell"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Unsafe cell that implements Send and Sync, and requires manual borrow checking"

[dependencies]
