[package]
name = "aerugo-cortex-m"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Cortex-M specific implementation for Aerugo"

[dependencies]
rtt-target = "0.4.0"

[features]
log = []
