[package]
name = "samv71-hal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "Crate containing drivers for SAMV71 peripherals"

[dependencies]
embedded-hal = "0.2.7"
fugit = "0.3.7"
samv71q21-pac = { version = "0.1.0", path = "../samv71q21-pac" }

[features]
rt = ["samv71q21-pac/rt"]
