[package]
name = "aerugo-x86"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "x86 specific implementation for Aerugo"

[dependencies]
aerugo-hal = { version = "0.1.0", path = "../../../aerugo-hal" }

[features]
log = []
