[package]
name = "x86-hal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
# homepage.workspace = true
license.workspace = true
description = "x86 implementation of aerugo HAL"

[dependencies]
aerugo-hal = { version = "0.1.0", path = "../../../aerugo-hal" }
bare-metal = "0.2.4"
once_cell = "1.18.0"
